src-ken&y/objects/Location__c.object
<CustomObject>
    <customHelpPage>HelpLocations</customHelpPage>
    <description>Organizational Unit or physical location primarily used if  subclassification reporting is desired</description>
    <fields>
        <fullName>Bin_Tracked__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Specifies whether this location has bins tracked.</description>
        <label>Bin Tracked</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Container_Package_Class__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Container Package Class</label>
        <referenceTo>Package_Class__c</referenceTo>
        <relationshipLabel>Locations</relationshipLabel>
        <relationshipName>Locations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Default_Max_Capacity__c</fullName>
        <description>Capacity value to be defaulted on the bins for the location</description>
        <label>Default Max Capacity</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <description>Location description</description>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ExtId__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Facility_Identifier__c</fullName>
        <description>Facility code to link this location to a facility at data load time ( matches Primary_Key on Facility)</description>
        <label>Facility Identifier</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Facility__c</fullName>
        <description>Lookup to facility</description>
        <label>Facility</label>
        <referenceTo>Facility__c</referenceTo>
        <relationshipLabel>Locations</relationshipLabel>
        <relationshipName>Locations</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Location_Facility__c</fullName>
        <description>Hidden field to check that Location+Facility is unique</description>
        <label>Location+Facility</label>
        <length>200</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Mixed_Bins_Allowed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Mixed Bins Allowed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Nettable__c</fullName>
        <defaultValue>true</defaultValue>
        <description>If checked the items in this location are nettable.</description>
        <label>Nettable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Primary_Key__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>unique key to allow data loading</description>
        <externalId>true</externalId>
        <label>Primary Key</label>
        <length>32</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Track_Bin_Capacity__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Track Bin Capacity</label>
        <type>Checkbox</type>
    </fields>
    <label>Location</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Facility__c</columns>
        <columns>Nettable__c</columns>
        <columns>Description__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Location</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Locations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>